Update Flutter workflow for caching and deployment
Updated Flutter SDK version to stable and added caching for pub-cache and Flutter directories. Modified build command to include base-href for GitHub Pages deployment.

--- a/.github/workflows/build_flutter_web.yml
+++ b/.github/workflows/build_flutter_web.yml
@@ -27,20 +27,32 @@ jobs:
         uses: flutter-actions/setup-flutter@v4
         with:
           channel: stable
-          version: 3.38.5
+          version: stable
+
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.pub-cache
+            ~/.flutter
+          key: flutter-${{ runner.os }}-${{ hashFiles('**/pubspec.lock') }}
+
       - name: Clean
         run: flutter clean
+
       - name: Pub Get
         run: flutter pub get
+
       - name: Build
-        run: flutter build web
+        run: flutter build web --base-href "/${{ github.event.repository.name }}/"
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: './build/web'
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
